--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
   <div>
     <a class="btn" href="#">Primary button</a>
   </div>
-
+  <div>
+    <a class="btn-subtle" href="#">Subtle button</a>
+  </div>
+  <div>
+    <a class="btn-ghost" href="#">Ghost button</a>
+  </div>
+  <div>
+    <a class="btn-warning" href="#">Warning Button</a>
+  </div>
+  <div>
+    <a class="btn-small" href="#">Primary button small</a>
+  </div>
+  <div>
+    <a class="btn-small" href="#">Subtle button small</a>
+  </div>
+  <div>
+    <a class="btn-small" href="#">Ghost button small</a>
+  </div>
+  <div>
+    <a class="btn-small" href="#">Warning button small</a>
+  </div>
+  <div>
+    <a class="btn-big" href="#">Primary button big</a>
+  </div>
+  <div>
+    <a class="btn-big" href="#">Subtle button big</a>
+  </div>
+  <div>
+    <a class="btn-big" href="#">Ghost button big</a>
+  </div>
+  <div>
+    <a class="btn-big" href="#">Warning button big</a>
+  </div>
   <!-- Add all other button styles here with both the <div> & <a> tags -->
 
 </body>
